--- a/COMMPort/COMMBasePort/COMMBasePortPlus.en.resx
+++ b/COMMPort/COMMBasePort/COMMBasePortPlus.en.resx
@@ -372,213 +372,7 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHSFf/u3/w+2T6lYadR/UgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox_COMMPortState.Location" type="System.Drawing.Point, System.Drawing">
-    <value>146, 3</value>
-  </data>
-  <data name="pictureBox_COMMPortState.Size" type="System.Drawing.Size, System.Drawing">
-    <value>25, 25</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pictureBox_COMMPortState.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
-    <value>Zoom</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pictureBox_COMMPortState.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
-  </data>
-  <data name="&gt;&gt;pictureBox_COMMPortState.Name" xml:space="preserve">
-    <value>pictureBox_COMMPortState</value>
-  </data>
-  <data name="&gt;&gt;pictureBox_COMMPortState.Type" xml:space="preserve">
-    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;pictureBox_COMMPortState.Parent" xml:space="preserve">
-    <value>panel_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;pictureBox_COMMPortState.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="button_COMMPortInit.Location" type="System.Drawing.Point, System.Drawing">
-    <value>177, 3</value>
-  </data>
-  <data name="button_COMMPortInit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>74, 25</value>
-  </data>
-  <data name="button_COMMPortInit.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
   <data name="button_COMMPortInit.Text" xml:space="preserve">
-    <value>打开设备</value>
-  </data>
-  <data name="&gt;&gt;button_COMMPortInit.Name" xml:space="preserve">
-    <value>button_COMMPortInit</value>
-  </data>
-  <data name="&gt;&gt;button_COMMPortInit.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;button_COMMPortInit.Parent" xml:space="preserve">
-    <value>panel_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;button_COMMPortInit.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="label_COMMPortName.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label_COMMPortName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 9</value>
-  </data>
-  <data name="label_COMMPortName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>6, 3, 1, 3</value>
-  </data>
-  <data name="label_COMMPortName.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>0, 0, 2, 0</value>
-  </data>
-  <data name="label_COMMPortName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>49, 12</value>
-  </data>
-  <data name="label_COMMPortName.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="label_COMMPortName.Text" xml:space="preserve">
-    <value>端口名:</value>
-  </data>
-  <data name="&gt;&gt;label_COMMPortName.Name" xml:space="preserve">
-    <value>label_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;label_COMMPortName.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;label_COMMPortName.Parent" xml:space="preserve">
-    <value>panel_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;label_COMMPortName.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="comboBox_COMMPortName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>57, 5</value>
-  </data>
-  <data name="comboBox_COMMPortName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>1, 3, 3, 3</value>
-  </data>
-  <data name="comboBox_COMMPortName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 20</value>
-  </data>
-  <data name="comboBox_COMMPortName.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;comboBox_COMMPortName.Name" xml:space="preserve">
-    <value>comboBox_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;comboBox_COMMPortName.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;comboBox_COMMPortName.Parent" xml:space="preserve">
-    <value>panel_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;comboBox_COMMPortName.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="panel_COMMPortName.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
-  <data name="panel_COMMPortName.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="panel_COMMPortName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 17</value>
-  </data>
-  <data name="panel_COMMPortName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>255, 33</value>
-  </data>
-  <data name="panel_COMMPortName.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;panel_COMMPortName.Name" xml:space="preserve">
-    <value>panel_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;panel_COMMPortName.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;panel_COMMPortName.Parent" xml:space="preserve">
-    <value>groupBox_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;panel_COMMPortName.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="groupBox_COMMPortName.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
-  <data name="groupBox_COMMPortName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 3</value>
-  </data>
-  <data name="groupBox_COMMPortName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>261, 53</value>
-  </data>
-  <data name="groupBox_COMMPortName.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
-  </data>
-  <data name="groupBox_COMMPortName.Text" xml:space="preserve">
-    <value>通信端口</value>
-  </data>
-  <data name="&gt;&gt;groupBox_COMMPortName.Name" xml:space="preserve">
-    <value>groupBox_COMMPortName</value>
-  </data>
-  <data name="&gt;&gt;groupBox_COMMPortName.Type" xml:space="preserve">
-    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;groupBox_COMMPortName.Parent" xml:space="preserve">
-    <value>panel_COMMPort</value>
-  </data>
-  <data name="&gt;&gt;groupBox_COMMPortName.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <metadata name="panel_COMMPort.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="panel_COMMPort.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
-  <data name="panel_COMMPort.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 2</value>
-  </data>
-  <data name="panel_COMMPort.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 3, 3, 3</value>
-  </data>
-  <data name="panel_COMMPort.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 59</value>
-  </data>
-  <data name="panel_COMMPort.TabIndex" type="System.Int32, mscorlib">
-    <value>7</value>
-  </data>
-  <data name="&gt;&gt;panel_COMMPort.Name" xml:space="preserve">
-    <value>panel_COMMPort</value>
-  </data>
-  <data name="&gt;&gt;panel_COMMPort.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;panel_COMMPort.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;panel_COMMPort.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 12</value>
-  </data>
-  <data name="$this.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>0, 2, 0, 0</value>
-  </data>
-  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 61</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>COMMBasePortPlus</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.UserControl, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>OpenDevice</value>
   </data>
 </root>
