--- a/LabMdiForm/MdiForm/MdiForm.en.resx
+++ b/LabMdiForm/MdiForm/MdiForm.en.resx
@@ -118,6 +118,72 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="menuStrip_MdiFormMenu.Text" xml:space="preserve">
-    <value>menuStrip11</value>
+    <value>ParentMenu</value>
+  </data>
+  <data name="statusStrip_MdiFormStatu.Text" xml:space="preserve">
+    <value>ParentTool</value>
+  </data>
+  <data name="ToolStripMenuItem_About.Text" xml:space="preserve">
+    <value>About(&amp;A)</value>
+  </data>
+  <data name="ToolStripMenuItem_Calc.Text" xml:space="preserve">
+    <value>Calculation(&amp;C)</value>
+  </data>
+  <data name="ToolStripMenuItem_Custom.Text" xml:space="preserve">
+    <value>Custom(&amp;C)</value>
+  </data>
+  <data name="ToolStripMenuItem_Edit.Text" xml:space="preserve">
+    <value>Edit(&amp;E)</value>
+  </data>
+  <data name="ToolStripMenuItem_Exit.Text" xml:space="preserve">
+    <value>Exit(&amp;E)</value>
+  </data>
+  <data name="ToolStripMenuItem_File.Text" xml:space="preserve">
+    <value>File(&amp;F)</value>
+  </data>
+  <data name="ToolStripMenuItem_Func.Text" xml:space="preserve">
+    <value>Function(&amp;F)</value>
+  </data>
+  <data name="ToolStripMenuItem_Help.Text" xml:space="preserve">
+    <value>Help(&amp;H)</value>
+  </data>
+  <data name="ToolStripMenuItem_New.Text" xml:space="preserve">
+    <value>New(&amp;N)</value>
+  </data>
+  <data name="ToolStripMenuItem_Open.Text" xml:space="preserve">
+    <value>Open(&amp;O)</value>
+  </data>
+  <data name="ToolStripMenuItem_Option.Text" xml:space="preserve">
+    <value>Option(&amp;O)</value>
+  </data>
+  <data name="ToolStripMenuItem_PageSet.Text" xml:space="preserve">
+    <value>PageSet(&amp;V)</value>
+  </data>
+  <data name="ToolStripMenuItem_Print.Text" xml:space="preserve">
+    <value>Print(&amp;P)</value>
+  </data>
+  <data name="ToolStripMenuItem_PrintView.Text" xml:space="preserve">
+    <value>PrintView(&amp;V)</value>
+  </data>
+  <data name="ToolStripMenuItem_Save.Text" xml:space="preserve">
+    <value>Save(&amp;S)</value>
+  </data>
+  <data name="ToolStripMenuItem_SaveAs.Text" xml:space="preserve">
+    <value>SaveAs(&amp;A)</value>
+  </data>
+  <data name="ToolStripMenuItem_Tool.Text" xml:space="preserve">
+    <value>Tool(&amp;T)</value>
+  </data>
+  <data name="ToolStripMenuItem_Tool.Text1" xml:space="preserve">
+    <value>Tool(&amp;T)</value>
+  </data>
+  <data name="ToolStripMenuItem_TXT.Text" xml:space="preserve">
+    <value>TXT(&amp;T)</value>
+  </data>
+  <data name="ToolStripMenuItem_Wind.Text" xml:space="preserve">
+    <value>Windows(&amp;W)</value>
+  </data>
+  <data name="ToolStripStatusLabel_SysTime.Text" xml:space="preserve">
+    <value>SystermTime：2019-03-27 Week</value>
   </data>
 </root>
